--- a/static/theme/light.css
+++ b/static/theme/light.css
@@ -8,8 +8,8 @@
     --calculate-button-background: rgb(19, 131, 193);
     --navbar-hover-color: #939393;
     --navbar-background: #cecece;
-    --navbar-toggler-background: #48474e;
-    --navbar-toggler-border: 1px solid rgb(37, 37, 37);
+    --navbar-toggler-background: #b3b2b2;
+    --navbar-toggler-border: 1px solid rgb(156, 156, 156);
     --snackbar-background: red;
     --triangle-color: #000000;
     --triangle-input-border: 1px solid #000000;
